// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu should only render add-menu for participants 1`] = `
<aside
  class="menu-bars menu-bars--user"
  id="menu-bars"
>
  <section
    class="menu user-menu"
  >
    <div
      class="menu__items"
    >
      <button
        class="menu-item menu-item--disabled menu-item--right"
        tabindex="300"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            Mark me as done
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-check.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item--disabled menu-item--right"
        tabindex="301"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            Raise your hand
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-hand.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item--right"
        tabindex="302"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            Change color scheme
          </span>
        </div>
      </button>
    </div>
  </section>
</aside>
`;

exports[`Menu should render both add- and settings-menu for moderators 1`] = `
<aside
  class="menu-bars menu-bars--user menu-bars--isAdmin"
  id="menu-bars"
>
  <section
    class="menu user-menu"
  >
    <div
      class="menu__items"
    >
      <button
        class="menu-item menu-item--disabled menu-item--right"
        tabindex="300"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            Mark me as done
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-check.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item--disabled menu-item--right"
        tabindex="301"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            Raise your hand
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-hand.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item--right"
        tabindex="302"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            Change color scheme
          </span>
        </div>
      </button>
    </div>
  </section>
  <section
    class="menu admin-menu"
  >
    <div
      class="menu__items"
    >
      <button
        class="menu-item menu-item--left"
        tabindex="0"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            Timer
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-timer.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item--left"
        tabindex="0"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            Voting
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-vote.svg
        </svg>
      </button>
      <button
        class="menu-item menu-item--disabled menu-item--left"
        tabindex="415"
      >
        <div
          class="menu-item__tooltip"
        >
          <span
            class="tooltip__text"
          >
            Start focused mode
          </span>
        </div>
        <svg
          class="menu-item__icon menu-item__icon--start"
        >
          icon-focus.svg
        </svg>
        <svg
          class="menu-item__icon menu-item__icon--end"
        >
          icon-close.svg
        </svg>
      </button>
    </div>
  </section>
  <button
    class="menu-bars__switch"
  >
    <svg
      class="switch__icon switch__icon--add"
    >
      icon-toggle-add-menu.svg
    </svg>
    <svg
      class="switch__icon switch__icon--settings"
    >
      icon-toggle-settings-menu.svg
    </svg>
  </button>
</aside>
`;
